2007-06-20  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* main.c: Fix SIGCHLD and SIGUSR1 signal handling. Signal handlers
	  set flags only, then a parent process checks flags in signal
	  safe places.

2007-06-18  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Fix compile warning and memory leak in
	  CursorResponse().

2007-06-15  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* Version 1.1.1

2007-06-11  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Fix kind mismatch error when
	  load_balance_mode is true 

2007-06-02  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Fix typo EmptyQueryResponse
	  message. pgpool hung up in EXECUTE command. (Patch contributed
	  by Kenichi Sawada)

2007-05-29  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Fix handling protocol version 2.

2007-05-25  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* Version 1.1

2007-05-24  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* parser/pool_memory.c: Fix core dump in pool_memory_realloc().

2007-05-17  Taiki Yamaguchi  <yamaguchi@sraoss.co.jp>

	* Support HBA authentication.
	* Support log_connections
	* Support log_hostname
	* Support "ps" status display
	* sample/pgpool.pam: PAM service configuration file. It will be
	  installed to "$PREFIX/share/pgpool-II/"
	* doc/pgpool-ja.html: Added pool_hba description.
	* doc/pgpool-en.html: Added pool_hba description.

2007-04-26  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_connection_pool.c: Retry connect() when it is interrupted
	  by signal.

2007-04-20  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Enhance that the query that begins with
	  "SELECT nextval()" or "SELECT setval()" are always replicated
	  under replication mode. Then, SELECT statements are only
	  executed by MASTER node if load_balance_mode is false. If need
	  to replicate select statement, add a comment in the begining of
	  the query.
